Lifting compacted variables fix - work in progress